function to save index with cov-structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(jit)
 export(partable)
 export(plotResults)
 export(plotSunAlt)
+export(saveIndex)
 export(setMap)
 export(setPar)
 export(setupData)
