--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(createMesh)
 export(defConf)
 export(defConfPred)
 export(fitModel)
+export(fitModelSim)
 export(includeDummyAge)
 export(includeDummyPar)
 export(includeIntPoints)
@@ -21,6 +22,7 @@ export(saveIndex)
 export(setMap)
 export(setPar)
 export(setupData)
+export(simStudy)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,sdreport)
 importFrom(stats,nlminb)
