--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(jit)
 export(partable)
 export(plotResults)
 export(plotSunAlt)
+export(retroSTIM)
 export(saveIndex)
 export(setMap)
 export(setPar)
