--- a/spatioTemporalIndices/DESCRIPTION
+++ b/spatioTemporalIndices/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Predict indices with a standard spatio-temporal Gaussian model. Ind
 License: What license is it under?
 Encoding: UTF-8
 LazyData: TRUE
-Depends: sp, TMB, INLA, mgcv, fields, rgeos, rgdal, marmap
+Depends: sp, TMB, INLA, mgcv, fields, rgeos, rgdal, marmap, sf
 LinkingTo: TMB, RcppEigen
 RoxygenNote: 7.2.3
 Suggests: 
