--- a/spatioTemporalIndices/DESCRIPTION
+++ b/spatioTemporalIndices/DESCRIPTION
@@ -14,8 +14,8 @@ Description: Estimate indices with a spatio-temporal Gaussian model. Indices may
 License: What license is it under?
 Encoding: UTF-8
 LazyData: TRUE
-Depends: TMB, INLA, mgcv, fields, marmap, sf
+Depends: TMB, fmesher, mgcv, fields, marmap, sf
 LinkingTo: TMB, RcppEigen
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Suggests: 
     testthat
