documentation, work in progress

--- a/spatioTemporalIndices/NAMESPACE
+++ b/spatioTemporalIndices/NAMESPACE
@@ -9,6 +9,8 @@ export(constructIntPoints)
 export(createMesh)
 export(defConf)
 export(defConfPred)
+export(defConf_alk)
+export(defpar_alk)
 export(fitModel)
 export(fitModelSim)
 export(includeDummyAge)
@@ -20,7 +22,9 @@ export(plotSunAlt)
 export(retroSTIM)
 export(saveIndex)
 export(setMap)
+export(setMap_alk)
 export(setPar)
+export(setUpData_alk)
 export(setupData)
 export(simStudy)
 importFrom(TMB,MakeADFun)
