--- a/spatioTemporalIndices/DESCRIPTION
+++ b/spatioTemporalIndices/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Estimate indices with a spatio-temporal Gaussian model. Indices may
 License: What license is it under?
 Encoding: UTF-8
 LazyData: TRUE
-Depends: TMB, fmesher, mgcv, fields, marmap, sf
+Depends: TMB, fmesher, mgcv, fields, marmap, sf, splancs
 LinkingTo: TMB, RcppEigen
 RoxygenNote: 7.3.1
 Suggests: 
