--- a/spatioTemporalIndices/DESCRIPTION
+++ b/spatioTemporalIndices/DESCRIPTION
@@ -18,4 +18,5 @@ Depends: TMB, fmesher, mgcv, fields, marmap, sf, splancs
 LinkingTo: TMB, RcppEigen
 RoxygenNote: 7.3.1
 Suggests: 
-    testthat
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
