--- a/spatioTemporalIndices/NAMESPACE
+++ b/spatioTemporalIndices/NAMESPACE
@@ -27,6 +27,7 @@ export(setPar)
 export(setUpData_alk)
 export(setupData)
 export(simStudy)
+importFrom(TMB,FreeADFun)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,sdreport)
 importFrom(stats,nlminb)
