--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -50,5 +50,4 @@ jobs:
         with:
           upload-snapshots: true
           working-directory: spatioTemporalIndices  # Specify the path to your package
-          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
-          error-on: "error" # Only fail on errors
+          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf --no-warnings")'
