--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -49,6 +49,9 @@ jobs:
           working-directory: spatioTemporalIndices # path to package
 
       - uses: r-lib/actions/check-r-package@v2
+        env:
+          _R_CHECK_CRAN_INCOMING_REMOTE_: false
+          NOT_CRAN: true
         with:
           upload-snapshots: true
           working-directory: spatioTemporalIndices  # path to package
