imports, R-CMD-check

--- a/spatioTemporalIndices/NAMESPACE
+++ b/spatioTemporalIndices/NAMESPACE
@@ -29,5 +29,19 @@ export(simStudy)
 importFrom(TMB,FreeADFun)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,sdreport)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(methods,as)
+importFrom(parallel,clusterEvalQ)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
+importFrom(parallel,stopCluster)
+importFrom(stats,as.formula)
 importFrom(stats,nlminb)
+importFrom(stats,rnorm)
+importFrom(utils,relist)
+importFrom(utils,write.table)
 useDynLib(spatioTemporalIndices)
