--- a/spatioTemporalIndices/NAMESPACE
+++ b/spatioTemporalIndices/NAMESPACE
@@ -18,6 +18,7 @@ export(includeIntPoints)
 export(jit)
 export(plotResults)
 export(plotSunAlt)
+export(posteriorMean)
 export(retroSTIM)
 export(saveIndex)
 export(setMap)
