--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,8 +46,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck, any::covr
-          needs: check, coverage
+          extra-packages: any::rcmdcheck
+          needs: check
           working-directory: spatioTemporalIndices # path to package
 
       - uses: r-lib/actions/check-r-package@v2
@@ -59,10 +59,4 @@ jobs:
           working-directory: spatioTemporalIndices  # path to package
           build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
           error-on: '"error"'   # Only fail on errors, not warnings/notes
-
-      - name: Test coverage
-        run: 
-          covr::codecov()
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
