--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -33,3 +33,6 @@ jobs:
           Rscript -e 'covr::codecov(quiet = FALSE)'
         working-directory: spatioTemporalIndices
 
+      - uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
