--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -30,11 +30,10 @@ jobs:
 
       - name: Test coverage
         run: 
-          Rscript -e 'covr::codecov(token = Sys.getenv("CODECOV_TOKEN"),quiet = FALSE)'
+          Rscript -e 'covr::codecov(quiet = FALSE) %>% covr::to_file("coverage.json")'
         working-directory: spatioTemporalIndices
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.json
