--- a/spatioTemporalIndices/NAMESPACE
+++ b/spatioTemporalIndices/NAMESPACE
@@ -27,6 +27,8 @@ export(setPar)
 export(setUpData_alk)
 export(setupData)
 export(simStudy)
+export(write_covriance_matrices)
+export(write_indices_ICES_format)
 importFrom(TMB,FreeADFun)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,sdreport)
