--- a/spatioTemporalIndices/DESCRIPTION
+++ b/spatioTemporalIndices/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Estimate indices with a spatio-temporal Gaussian model. Indices may
 License: GPL-3
 Encoding: UTF-8
 LazyData: TRUE
-Imports: TMB, fmesher, mgcv, fields, marmap, sf, splancs, methods
+Imports: TMB, fmesher, mgcv, fields, marmap, sf, splancs, methods, ellipse
 LinkingTo: TMB, RcppEigen
 RoxygenNote: 7.3.1
 Suggests: 
